2006-07-12  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Prefix generated constant names with a 'C' in case the name starts
	  with an digit, to avoid an exception ;
	- Added write-support for properties ;
	- Fixed AE -> Ruby boolean type conversion ;
	- When passing parameters, check if OSA::Element objects are given 
	  and use them instead of creating new ones.

	* sample/iTunes_control.rb:
	Use the mute property.

	* TODO:
	- Updated to mention events timeout ;
	- Closed the 'write-support' point.

2006-07-11  Laurent Sansonetti  <lsansonetti@apple.com>

	* extconf.rb, src/rbosa.h:
	Generate modified Ruby headers at build time to avoid symbol
	collisions (ID, T_DATA).

2006-07-10  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/iTunes_control.rb:
	Reverted last change since it does not seem to work... print a message
	in the meantime we don't support write operations.

	* src/lib/rbosa.rb:
	Do not print warning messages unless $VERBOSE is set.

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
	Added x86 support (fixed FourCharCode swapping issues).

2006-07-05  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa_sdef.c, src/rbosa.h,
	  sample/sdef.rb, sample/iTunes_control.rb, sample/iTunes_inspect.rb:
	API change: OSA.app() is splited in 4 sub-methods: OSA.app_with_name(),
	OSA.app_with_path(), OSA.app_with_bundle_id() and OSA.app_with_signature.

	* src/lib/rbosa.rb:
	Convert null elements to nil (fix by Vincent Isambart).

	* sample/iTunes_control.rb:
	When starting and if there is currently no track, select the first one 
	and play it.

	* TODO:
	Reformat.

2006-06-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* COPYRIGHT, ChangeLog, README, TODO, extconf.rb, 
	  sample/iTunes_control.rb, sample/iTunes_inspect.rb, sample/sdef.rb, 
	  src/rbosa.c, src/rbosa.h, src/rbosa_conv.c, src/rbosa_sdef.c, 
	  lib/rbosa.rb:
	Initial RubyForge revision.