@@ -1,3 +1,8 @@
+2006-07-13  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* sample/iChat_uptime.rb:
+	New sample.
+
 2006-07-12  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb:
